objects/EUR_CRM_Investment_Type__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Approval_Status__c</fullName>
        <label>Approval Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>EUR_CRM_Brand__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Investment_Amount__c</fullName>
        <description>For the following affiliates:
1. Portugal (PRT)</description>
        <label>Investment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Investment_Request__c</fullName>
        <label>Investment Request</label>
        <referenceTo>EUR_CRM_Investments__c</referenceTo>
        <relationshipName>Investments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Investment_Type__c</fullName>
        <label>Investment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bottles</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Credit Note</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>Bar Styling</fullName>
                </value>
                <value>
                    <fullName>Image Activities</fullName>
                </value>
                <value>
                    <fullName>Rotation Activities</fullName>
                </value>
                <value>
                    <fullName>KAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_MKT__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MKT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total__c</fullName>
        <formula>EUR_CRM_MKT__c + EUR_CRM_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Volume_Bottles__c</fullName>
        <label>Volume (Bottles)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Investment Type (EU)</label>
    <nameField>
        <displayFormat>IV{0000}</displayFormat>
        <label>Investment Type ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investment Types (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_PRT_CRM_Investment_All_Others</fullName>
        <active>true</active>
        <description>Dinheiro, Nota de Crédito, Conteúdo, Bar Styling, Taylor Made, POS, Outros</description>
        <label>Outros Tipos de Investimento</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_CRM_Investment_Bottles</fullName>
        <active>true</active>
        <label>Garrafas</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EUR_CRM_Investment_MKT</fullName>
        <active>false</active>
        <errorConditionFormula>AND($UserRole.Name = &quot;Marketing Director (PRT)&quot;,   EUR_CRM_MKT__c  &lt;=0)</errorConditionFormula>
        <errorDisplayField>EUR_CRM_MKT__c</errorDisplayField>
        <errorMessage>MKT amount must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_CRM_Investment_Sales</fullName>
        <active>false</active>
        <errorConditionFormula>AND($UserRole.Name = &quot;Commercial Director (PRT)&quot;,  EUR_CRM_Sales__c &lt;=0)</errorConditionFormula>
        <errorDisplayField>EUR_CRM_Sales__c</errorDisplayField>
        <errorMessage>Sales amount must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EUR_CRM_Investment_Total</fullName>
        <active>false</active>
        <errorConditionFormula>EUR_CRM_Total__c =0</errorConditionFormula>
        <errorMessage>The &apos;MKT&apos; field OR the &apos;Sales&apos; field should be more than 0</errorMessage>
    </validationRules>
</CustomObject>